--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,25 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Project's backend side",
-  "main": "index.js",
+  "private": true,
+  "main": "./dist/index.js",
   "author": "aiotrope",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aiotrope/paracosm.git"
+  },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/config": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.196",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^20.4.9",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.2.0",
@@ -20,13 +33,22 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/node": "^20.4.9",
+    "@typegoose/typegoose": "^11.4.1",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "redis": "^4.6.7",
+    "ts-node-dev": "^2.0.0",
+    "zod": "^3.21.4",
+    "zod-error": "^1.5.0"
   }
 }
