--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,19 +1,25 @@
 services:
-  mongo_db:
-  image: mongo:latest
-  container_name: mongo_container
-  restart: always
-  environment:
-    MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
-    MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
-    MONGO_INITDB_DATABASE: ${MONGODB_DATABASE_NAME}
-  env_file:
-    - ./.env
-  volumes:
-    - mongo_data:/data/db
-  ports:
-    - '${MONGODB_CONTAINER_PORT}:${MONGODB_LOCAL_PORT}'
+  mongo:
+    image: mongo:latest
+    container_name: mongo_container
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD_FILE: /run/secrets/mongodb_password
+      MONGO_INITDB_DATABASE: ${MONGODB_DATABASE_NAME}
+    env_file:
+      - ./.env
+    volumes:
+      - mongo_data:/data/db
+    ports:
+      - '${MONGODB_LOCAL_PORT}:${MONGODB_CONTAINER_PORT}'
+    secrets:
+      - mongodb_password
 
+
+secrets:
+  mongodb_password:
+    file: mongodb_password.txt
 
 volumes:
   mongo_data: {}
