--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
@@ -50,7 +51,8 @@
     "redis": "^4.6.7",
     "remove": "^0.1.5",
     "zod": "^3.21.4",
-    "zod-error": "^1.5.0"
+    "zod-error": "^1.5.0",
+    "zod-validation-error": "^1.3.1"
   },
   "scripts": {
     "transpile": "rimraf dist/ && npx tsc",
