--- a/server/package.json
+++ b/server/package.json
@@ -41,8 +41,10 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
+    "isomorphic-dompurify": "^1.8.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.2",
