--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,6 +4,8 @@
   "semi": false,
   "singleQuote": true,
   "bracketSpacing": true,
+  "jsxSingleQuote": true,
+  "printWidth": 200,
   "arrowParens": "always",
   "proseWrap": "never",
   "htmlWhitespaceSensitivity": "strict",
