♻️ refactor(client): edit files

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,7 +25,7 @@
     },
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.eslint.json"
   },
   "plugins": ["react-refresh", "@typescript-eslint", "import", "prettier"],
   "rules": {
