--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
     "format": "prettier --ignore-path .prettierignore --write \"**/*.+(js|ts|tsx|json)\""
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,7 +29,6 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
