--- a/reverie-api/.eslintrc
+++ b/reverie-api/.eslintrc
@@ -3,18 +3,11 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "airbnb-base",
-    "airbnb-typescript/base",
-    "prettier",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./tsconfig.eslint.json"
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
@@ -36,5 +29,5 @@
     "@typescript-eslint/no-unused-vars": ["error"],
     "@typescript-eslint/no-explicit-any": "off"
   },
-  "ignorePatterns": ["build/", "dist/", "client/", "node_modules"]
+  "ignorePatterns": ["build/", "dist/", "client/", "node_modules", "reverie-ui/"]
 }
