♻️ refactor(app): further server revisions

--- a/reverie-api/tsconfig.json
+++ b/reverie-api/tsconfig.json
@@ -117,5 +117,5 @@
     "**/*.tsx",
     "dist"
   ],
-  "typeRoots": ["./node_modules/@types", "./src/types"]
+  "typeRoots": ["./node_modules/@types", "./src/types/**/*"]
 }
