--- a/reverie-api/package.json
+++ b/reverie-api/package.json
@@ -39,9 +39,19 @@
     "isomorphic-dompurify": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mongoose": "^7.6.4",
     "morgan": "^1.10.0",
     "zod": "^3.22.4",
     "zod-error": "^1.5.0",
     "zod-validation-error": "^2.0.0"
+  },
+  "scripts": {
+    "transpile": "rm -rf dist/ && tsc",
+    "build": "NODE_ENV=staging yarn run transpile",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --pretty --transpile-only --exit-child ./src/index.ts",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "linting": "eslint --ignore-path .eslintignore './src/**/*.{ts,js}'",
+    "lint": "yarn run linting -- --fix",
+    "format": "prettier --ignore-path .prettierignore --write \"**/*.+(ts|js|json|md)\""
   }
 }
