--- a/reverie-api/.dockerignore
+++ b/reverie-api/.dockerignore
@@ -1,4 +1,3 @@
-.env.*
 node_modules
 .DS_Store
 .vscode
@@ -14,3 +13,6 @@ example.*
 LICENSE
 .eslintignore
 .prettierignore
+.eslintrc
+.prettierrc
+.env.*
