--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,10 @@ http {
 
     location /api/ {
       proxy_pass http://reverie-api/;
+      proxy_set_header Connection '';
+      proxy_http_version 1.1;
+      proxy_cache off;
+      chunked_transfer_encoding off;
     }
   }
 }
