--- a/reverie-api/package.json
+++ b/reverie-api/package.json
@@ -36,6 +36,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
+    "ioredis": "^5.3.2",
     "isomorphic-dompurify": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
