--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,11 @@ http {
   upstream reverie-api {
     server reverie-api:8080;
   }
-  
+
+  upstream reverie-ui {
+    server reverie-ui:5173;
+  }
+
   server {
     listen 7800;
 
@@ -18,6 +22,14 @@ http {
       proxy_http_version 1.1;
       proxy_cache off;
       chunked_transfer_encoding off;
+    }
+
+    location / {
+      proxy_pass http://reverie-ui;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_set_header Host $host;
     }
   }
 }
