--- a/reverie-api/.eslintrc
+++ b/reverie-api/.eslintrc
@@ -26,8 +26,8 @@
     "no-underscore-dangle": "off",
     "consistent-return": "off",
     "func-names": "off",
-    "@typescript-eslint/no-unused-vars": ["warning"],
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-unused-vars": 1,
+    "@typescript-eslint/no-explicit-any": 0
   },
   "ignorePatterns": ["build/", "dist/", "client/", "node_modules", "reverie-ui/"]
 }
