--- a/reverie-api/package.json
+++ b/reverie-api/package.json
@@ -7,7 +7,7 @@
   "author": "aiotrope",
   "license": "MIT",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.5",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.6.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
