--- a/reverie-ui/package.json
+++ b/reverie-ui/package.json
@@ -15,17 +15,20 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.4.3",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "eslint-plugin-prettier": "^5.0.1",
     "isomorphic-dompurify": "^1.9.0",
     "jotai": "^2.5.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
-    "react-toastify": "^9.1.3",
     "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
@@ -38,6 +41,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
