--- a/reverie-api/package.json
+++ b/reverie-api/package.json
@@ -42,6 +42,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^7.6.4",
     "morgan": "^1.10.0",
+    "slugify": "^1.6.6",
     "zod": "^3.22.4",
     "zod-error": "^1.5.0",
     "zod-validation-error": "^2.0.0"
