--- a/reverie-ui/package.json
+++ b/reverie-ui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.4.3",
+    "@wcj/markdown-style": "^1.0.25",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "eslint-plugin-prettier": "^5.0.1",
@@ -28,7 +29,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.18.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
