--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   mongo_db:
     container_name: db_container
     image: mongo:latest
-    restart: 'no'
+    restart: on-failure
     env_file:
       - ./.env.development
     environment:
@@ -26,6 +26,7 @@ services:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
     expose:
       - 6379
+    restart: on-failure
     networks:
       - backnet
 
