--- a/reverie-api/package.json
+++ b/reverie-api/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^7.6.4",
+    "mongoose-slug-updater": "^3.3.0",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
     "zod": "^3.22.4",
