--- a/reverie-api/jsconfig.json
+++ b/reverie-api/jsconfig.json
@@ -4,5 +4,7 @@
         "target": "ES6",
         "checkJs": true
     },
-    "exclude": ["node_modules",]
+    "exclude": ["node_modules",],
+    "include": ["./src/**/*"]
+
 }
