--- a/reverie-ui/jsconfig.json
+++ b/reverie-ui/jsconfig.json
@@ -4,5 +4,6 @@
     "target": "ES6",
     "checkJs": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*"]
 }
