--- a/reverie-ui/tsconfig.json
+++ b/reverie-ui/tsconfig.json
@@ -9,6 +9,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowJs": true,
+    "checkJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
