♻️ refactor(app): edit files

--- a/reverie-ui/tsconfig.json
+++ b/reverie-ui/tsconfig.json
@@ -25,7 +25,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "src/test", "reverie-api/", "dist"],
