--- a/reverie-api/jsconfig.json
+++ b/reverie-api/jsconfig.json
@@ -1,10 +1,9 @@
 {
-    "compilerOptions": {
-        "module": "CommonJS",
-        "target": "ES6",
-        "checkJs": true
-    },
-    "exclude": ["node_modules",],
-    "include": ["./src/**/*"]
-
+  "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES6",
+    "checkJs": true
+  },
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*"]
 }
